Remove JUnit 4 from everything but tycho-its
The tests of all other modules run on JUnit Jupiter now, so the testing
harness no longer needs junit and TychoPlexusTestCase, whose @Rule,
@Before and @After were never called under the Jupiter engine anyway.
tycho-its declares junit itself, as it used to get it from the harness.

tycho-surefire-plugin declares it too, not for its own tests but because
its vintage provider artifacts declare a TestEngine that surefire only
provisions when JUnit 4 is on the test classpath.

Assisted-by: Anthropic Claude Code (claude-opus-5[1m])